force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Primary_Plan_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Primary_Plan_Type_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(MVN_Primary_Member_Plan__c)),
TEXT(MVN_Primary_Plan_Type__c),
CASE(MVN_Access_Type__c,
 &apos;Cash&apos;,&apos;CASH&apos;,
 &apos;Patient Assistance Program&apos;,&apos;FREEGOODS&apos;,
 &apos;Interim Access Program&apos;,&apos;FREEGOODS&apos;,
 &apos;Clinical Trial Transition Program&apos;,&apos;FREEGOODS&apos;,
&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Payer Type Formula</label>
    <type>Text</type>
</CustomField>