force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>MVN_Product_Name__c</fullName>
    <defaultValue>&quot;Evkeeza&quot;</defaultValue>
    <description>Product brand name represented by NDC</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>