force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Program_Consent_Status__c.field-meta.xml
<CustomField>
    <fullName>MVN_Program_Consent_Status__c</fullName>
    <label>Program Consent Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opt In</fullName>
            </value>
            <value>
                <fullName>Opt Out</fullName>
            </value>
            <value>
                <fullName>Not Given</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>