force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Reauthorization_Flag_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Reauthorization_Flag_Formula__c</fullName>
    <formula>IF(ISPICKVAL(MVN_Primary_PA_Type__c, &quot;Reauthorization&quot;),
&quot;Y&quot;,
&quot;N&quot;)</formula>
    <label>Reauthorization Flag Formula</label>
    <type>Text</type>
</CustomField>