force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Referral_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Referral_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Date</label>
    <type>DateTime</type>
</CustomField>