force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>MVN_Referral_Source__c</fullName>
    <description>Source of where the patient was referred to HUB</description>
    <label>Referral Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AssistRx</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>