force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Restatement__c.field-meta.xml
<CustomField>
    <fullName>MVN_Restatement__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>Flag to indicate if the transaction has been restated</description>
    <label>Restatement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>