force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Restatement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Restatement_End_Date__c</fullName>
    <description>End Date for the period to apply the restatement.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The restatement will apply on those events with created date before this Restatement End Date</inlineHelpText>
    <label>Restatement End Date</label>
    <type>Date</type>
</CustomField>