force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Restatement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MVN_Restatement_Start_Date__c</fullName>
    <description>Start Date for the period to apply the restatement.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The restatement will apply on those events with created date after this Restatement Start Date</inlineHelpText>
    <label>Restatement Start Date</label>
    <type>Date</type>
</CustomField>