force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Rx_Receipt_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Rx_Receipt_Date_Formula__c</fullName>
    <formula>IF(
MVN_HIPAA_Consent_Status_Formula__c==&apos;Y&apos; &amp;&amp; NOT(ISBLANK(PJN_Date_of_Rx_Receipt__c)),

LEFT(TEXT(PJN_Date_of_Rx_Receipt__c),4)&amp;
MID(TEXT(PJN_Date_of_Rx_Receipt__c),6,2)&amp;
MID(TEXT(PJN_Date_of_Rx_Receipt__c),9,2)&amp;
&apos;000000&apos;,

null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rx Receipt Date Formula</label>
    <type>Text</type>
</CustomField>