force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Secondary_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_Member_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Events (Secondary Member Plan)</relationshipLabel>
    <relationshipName>Events_Secondary_Member_Plan</relationshipName>
    <type>Lookup</type>
</CustomField>