force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Secondary_PA_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_PA_Type__c</fullName>
    <label>Secondary PA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Appeal - 1st Level</fullName>
            </value>
            <value>
                <fullName>Appeal - 2nd Level</fullName>
            </value>
            <value>
                <fullName>Appeal - 3rd Level</fullName>
            </value>
            <value>
                <fullName>Appeal - Peer-to-Peer</fullName>
            </value>
            <value>
                <fullName>Appeal - External Review</fullName>
            </value>
            <value>
                <fullName>Appeal - Formal Grievance</fullName>
            </value>
            <value>
                <fullName>Reauthorization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>