force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Secondary_Payer_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_Payer_Name_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(PJN_Secondary_Payer_Name__c)),
PJN_Secondary_Payer_Name__c,
CASE(MVN_Access_Type__c,
&apos;Patient Assistance Program&apos;,&apos;Regeneron&apos;,
&apos;Interim Access Program&apos;,&apos;Regeneron&apos;,
&apos;Clinical Trial Transition Program&apos;,&apos;Regeneron&apos;,
&apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Secondary Payer Name Formula</label>
    <type>Text</type>
</CustomField>