force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Secondary_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>MVN_Secondary_Plan_Type__c</fullName>
    <label>Secondary Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private/Commercial</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Tricare</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>