force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Single_Restatement__c.field-meta.xml
<CustomField>
    <fullName>MVN_Single_Restatement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true to indicate that the restatement should only apply to this record.</description>
    <inlineHelpText>Set to true to indicate that the restatement should only apply to this record.</inlineHelpText>
    <label>Single Restatement</label>
    <type>Checkbox</type>
</CustomField>