force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Start_Form_Received_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Start_Form_Received_Date_Formula__c</fullName>
    <formula>IF(
 MVN_HIPAA_Consent_Status_Formula__c==&apos;Y&apos; &amp;&amp; NOT(ISBLANK(MVN_Referral_Date__c)),
 
 LEFT(TEXT(MVN_Referral_Date__c),4)&amp;
 MID(TEXT(MVN_Referral_Date__c),6,2)&amp;
 MID(TEXT(MVN_Referral_Date__c),9,2)&amp;
 &apos;000000&apos;,

 null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Form Received Date Formula</label>
    <type>Text</type>
</CustomField>