force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>MVN_Status_Code__c</fullName>
    <description>Patient status codes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>