force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Status_Description__c.field-meta.xml
<CustomField>
    <fullName>MVN_Status_Description__c</fullName>
    <description>Regeneron Status Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Status Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>