force-app/main/default/src/objects/PJN_Event__c/fields/MVN_Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>MVN_Status_Formula__c</fullName>
    <description>Concatenation of status and sub status.</description>
    <formula>PJN_Status__c
&amp; 
IF(
NOT(ISBLANK(MVN_SubStatus_Description__c)),
&quot; - &quot;,
NULL
)
&amp;
MVN_SubStatus_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>